force-app/main/default/objects/Sold_Case_Checklist__c/fields/Hospital_Bill_Audit_Optum__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Bill_Audit_Optum__c</fullName>
    <label>Hospital Bill Audit - Optum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
                <isActive>false</isActive>
                <label>Blank</label>
            </value>
            <value>
                <fullName>Opt-out option</fullName>
                <isActive>false</isActive>
                <label>Opt-out option</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>