force-app/main/default/objects/Sold_Case_Checklist__c/fields/Hospital_Bill_Audit_Optum_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Bill_Audit_Optum_Percentage__c</fullName>
    <label>Hospital Bill Audit - Optum Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>