force-app/main/default/objects/Sold_Case_Checklist__c/fields/HP_Alliance__c.field-meta.xml
<CustomField>
    <fullName>HP_Alliance__c</fullName>
    <label>HP Alliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance Addendum</fullName>
            </value>
            <value>
                <fullName>Straight Alliance with HP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>