force-app/main/default/objects/Sold_Case_Checklist__c/fields/HP_Sold_Retained_Members__c.field-meta.xml
<CustomField>
    <fullName>HP_Sold_Retained_Members__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HP-Sold Members</label>
    <length>25</length>
    <type>Text</type>
</CustomField>