force-app/main/default/objects/Sold_Case_Checklist__c/fields/Hysterectomy__c.field-meta.xml
<CustomField>
    <fullName>Hysterectomy__c</fullName>
    <label>Hysterectomy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Opt In</fullName>
                <isActive>false</isActive>
                <label>Opt In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>