force-app/main/default/objects/Sold_Case_Checklist__c/fields/If_Rx_is_not_sold_add_Rx_Vendor__c.field-meta.xml
<CustomField>
    <fullName>If_Rx_is_not_sold_add_Rx_Vendor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zz_If Rx not sold,add Rx Vndr/Coalition</label>
    <length>25</length>
    <type>Text</type>
</CustomField>