force-app/main/default/objects/Sold_Case_Checklist__c/fields/Implementation_Guarantees_WriteIn__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Guarantees_WriteIn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Guarantees WriteIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>