force-app/main/default/objects/Sold_Case_Checklist__c/fields/Implementation_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Year_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Implementation Audit Year 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>