force-app/main/default/objects/Sold_Case_Checklist__c/fields/Inflammatory_Medication_Site_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Inflammatory_Medication_Site_of_Care__c</fullName>
    <label>Inflammatory Medication Site of Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Opt In</fullName>
                <isActive>false</isActive>
                <label>Opt In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>