force-app/main/default/objects/Sold_Case_Checklist__c/fields/Injury_Coverage_Coordination_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Injury_Coverage_Coordination_Percentage__c</fullName>
    <label>Injury Coverage Coordination Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>