force-app/main/default/objects/Sold_Case_Checklist__c/fields/IPM__c.field-meta.xml
<CustomField>
    <fullName>IPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Lead (IPM/PIM)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>IPM Advanced Profile</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>IPM Standard Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>IPM</relationshipName>
    <type>Lookup</type>
</CustomField>