force-app/main/default/objects/Sold_Case_Checklist__c/fields/Itemized_Bill_Review__c.field-meta.xml
<CustomField>
    <fullName>Itemized_Bill_Review__c</fullName>
    <label>Itemized Bill Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Carveout</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>