force-app/main/default/objects/Sold_Case_Checklist__c/fields/Itemized_Bill_Review_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Itemized_Bill_Review_Percentage__c</fullName>
    <label>Itemized Bill Review Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>