force-app/main/default/objects/Sold_Case_Checklist__c/fields/Leased_Network__c.field-meta.xml
<CustomField>
    <fullName>Leased_Network__c</fullName>
    <label>HI/PR Leased Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Puerto Rico</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>