force-app/main/default/objects/Sold_Case_Checklist__c/fields/Legal_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Client_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Client Name</label>
    <type>TextArea</type>
</CustomField>