force-app/main/default/objects/Sold_Case_Checklist__c/fields/Life_Di_Cross_Sell_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Life_Di_Cross_Sell_Year_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life/DI Cross Sell - Year 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>