force-app/main/default/objects/Sold_Case_Checklist__c/fields/Life_DI_Implementation_Year_3__c.field-meta.xml
<CustomField>
    <fullName>Life_DI_Implementation_Year_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life/DI Implementation - Year 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>