force-app/main/default/objects/Sold_Case_Checklist__c/fields/Maternity_21_month_program__c.field-meta.xml
<CustomField>
    <fullName>Maternity_21_month_program__c</fullName>
    <label>Maven - Maternity 21 month program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Sold</fullName>
            </value>
            <value>
                <fullName>Yes - Retained</fullName>
            </value>
            <value>
                <fullName>Yes - Direct Contract</fullName>
            </value>
            <value>
                <fullName>No - N/A</fullName>
            </value>
            <value>
                <fullName>No - Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>