force-app/main/default/objects/Sold_Case_Checklist__c/fields/Medical_Performance_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Medical_Performance_Guarantee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Performance Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>