force-app/main/default/objects/Sold_Case_Checklist__c/fields/Medical_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Medical_Underwriter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NB Medical Underwriter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>