force-app/main/default/objects/Sold_Case_Checklist__c/fields/National_Network_Outpatient_Inpatient_UM__c.field-meta.xml
<CustomField>
    <fullName>National_Network_Outpatient_Inpatient_UM__c</fullName>
    <label>National Network,Outpatient/Inpatient,UM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
                <default>true</default>
                <label>Included</label>
            </value>
            <value>
                <fullName>Opt out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>