force-app/main/default/objects/Sold_Case_Checklist__c/fields/Niche_Vendors_to_Integrate__c.field-meta.xml
<CustomField>
    <fullName>Niche_Vendors_to_Integrate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Vendors to Integrate</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>