force-app/main/default/objects/Sold_Case_Checklist__c/fields/Offshore_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Provisions__c</fullName>
    <label>Offshore Provisions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 0 Individual Functions</fullName>
            </value>
            <value>
                <fullName>Level 1 Claim Transactions</fullName>
            </value>
            <value>
                <fullName>Level 2 Additional Claim Transactions Services</fullName>
            </value>
            <value>
                <fullName>Level 3 Member Facing Services</fullName>
            </value>
            <value>
                <fullName>Level 4 Customer Facing Services</fullName>
            </value>
            <value>
                <fullName>Level 5 Provider Facing Services</fullName>
            </value>
            <value>
                <fullName>Level 6 All Business Operations Onshore Except It</fullName>
            </value>
            <value>
                <fullName>Level 7 All Business Operations and It Work</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>