force-app/main/default/objects/Sold_Case_Checklist__c/fields/Offshore_Provisions_Level_0__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Provisions_Level_0__c</fullName>
    <label>Offshore Provisions Level 0</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACIS Analyst</fullName>
            </value>
            <value>
                <fullName>Billing Analyst</fullName>
            </value>
            <value>
                <fullName>Contract Issuance Analyst</fullName>
            </value>
            <value>
                <fullName>Eligibility Analyst - Electronic</fullName>
            </value>
            <value>
                <fullName>iBAAG Installation Analyst</fullName>
            </value>
            <value>
                <fullName>ID Card Analyst</fullName>
            </value>
            <value>
                <fullName>Implementation Manager</fullName>
            </value>
            <value>
                <fullName>TOPS Installation Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>