force-app/main/default/objects/Sold_Case_Checklist__c/fields/Offshore_Provisions_Level_7__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Provisions_Level_7__c</fullName>
    <label>Offshore Provisions Level 7</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - All Business Operations and IT Work Onshore – Masking of Protected Data is Allowed</fullName>
            </value>
            <value>
                <fullName>B - All Business Operations and IT Work/Resources Onshore</fullName>
            </value>
            <value>
                <fullName>All Business Operations and IT Work Onshore – Masking of Protected Data is Allowed</fullName>
                <isActive>false</isActive>
                <label>All Business Operations and IT Work Onshore – Masking of Protected Data is Allowed</label>
            </value>
            <value>
                <fullName>All Business Operations and IT Work/Resources Onshore</fullName>
                <isActive>false</isActive>
                <label>All Business Operations and IT Work/Resources Onshore</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>