force-app/main/default/objects/Sold_Case_Checklist__c/fields/Optum_Engage_Select__c.field-meta.xml
<CustomField>
    <fullName>Optum_Engage_Select__c</fullName>
    <label>Optum Engage Select</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Sold</fullName>
            </value>
            <value>
                <fullName>Yes - Retained</fullName>
            </value>
            <value>
                <fullName>No - N/A</fullName>
            </value>
            <value>
                <fullName>No - Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>