force-app/main/default/objects/Sold_Case_Checklist__c/fields/Optum_Financial_SVP__c.field-meta.xml
<CustomField>
    <fullName>Optum_Financial_SVP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Financial SVP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>