force-app/main/default/objects/Sold_Case_Checklist__c/fields/Optum_Physical_Health_Network__c.field-meta.xml
<CustomField>
    <fullName>Optum_Physical_Health_Network__c</fullName>
    <label>Optum Physical Health Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>