force-app/main/default/objects/Sold_Case_Checklist__c/fields/Optum_Solution_Sales_Exec__c.field-meta.xml
<CustomField>
    <fullName>Optum_Solution_Sales_Exec__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Solution Sales Exec</label>
    <length>25</length>
    <type>Text</type>
</CustomField>