force-app/main/default/objects/Sold_Case_Checklist__c/fields/Optum_Transplant_Resource_Services__c.field-meta.xml
<CustomField>
    <fullName>Optum_Transplant_Resource_Services__c</fullName>
    <label>Optum Transplant Resource Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
                <default>true</default>
                <label>Opt In</label>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>