force-app/main/default/objects/Sold_Case_Checklist__c/fields/OptumRx_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>OptumRx_Underwriter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OptumRx Underwriter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>