force-app/main/default/objects/Sold_Case_Checklist__c/fields/Other_Custom_Credit_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Custom_Credit_Year_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Custom Credit - Year 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>